filmlist pc&mobile view almost done - whitespace issue on mobile

--- a/src/css/filmList.css
+++ b/src/css/filmList.css
@@ -53,12 +53,13 @@ body, .container, .aboutBox, .aboutScrollArea {
     padding-bottom: 30px;
 }
 .filmCard > img{
-    height: 195px;
+    height: 199px;
     width: 130px;
     grid-area: image;
-    border-radius: 15%;
+    border-radius: 15% 0% 0% 15%;
     margin-top: 7px;
     margin-left: 25px;
+    border: 1px solid #B78841;
 }
 
 .filmTitle{
@@ -93,8 +94,10 @@ body, .container, .aboutBox, .aboutScrollArea {
     grid-area: genre;
     color:lightskyblue;
     margin-bottom: 10px;
-    margin-left: 15px;
+    /* margin-left: -25px; */
     font-size: 12px;
+    text-align: center;
+    width: 150px;
 }
 .navbar{
     grid-area: nav;
@@ -149,7 +152,13 @@ body, .container, .aboutBox, .aboutScrollArea {
         /* width:500px;
         height:100vh; */
     }
- 
+ .heading{
+    font-size: xx-large;
+    position: absolute;
+    top: 130px;
+   
+    
+ }
 /*Div around each card element gives chance to enlarge background without effing up content!*/
  .filmCard{
     grid-template-rows: repeat(12,  minmax(20px, 1fr));
@@ -161,23 +170,53 @@ body, .container, .aboutBox, .aboutScrollArea {
     background-size:contain;
     background-position:center;
     height: 260px;  
-    width: 400px; 
+    /* width: 400px;  */
     /* margin-right: 40px; */
     
     /* min-height:500px; */
-    border: 2px solid hotpink;  
+
     /* padding: 150px; */
 
 }
-
 .filmCard > img{
-    grid-column: 1/6;
-    grid-row: 1/7;
-    margin-top: 27px;
-    margin-left: 12px;
+    grid-column: 1/7;
+    grid-row: 2/12;
+    margin-left: 15px;
+    margin-top: 0px;
+    height: 220px;
+    border: 2px solid #B78841;
+    border-radius: 25%  0% 0% 25% ;
+}
+.filmTitle{
+    grid-column: 6/11;
+    grid-row: 2/3;
+}
+.filmDirector{
+    grid-column:6/7 ;
+    grid-row: 4/5;
+    font-size: 15px;
+}
+.filmRuntime{
+    grid-column: 10/11 ;
+    grid-row: 4/5;
+    font-size: 15px;
+}
+.filmPrice{
+    grid-column: 10/12 ;
+    grid-row: 9/10;
+    width: 40px;
+    font-size: large;
+}
+.filmGenres{
+    grid-column: 7/11 ;
+    grid-row: 11/13;
+    width: 160px;
+    text-align: center;
+    margin-left: -20px;
+    font-size: 15px;
 }
 
-    .footer{
+.footer{
         background-image: url(/assets/images/footerImg_filmList.png);
         background-position: center;
         background-size: cover;
